# aoc2025

./: README.md
1/: 1.cpp  a.out
10/: 10.cpp  10_1.cpp  10_2.cpp  10_3.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output
11/: 11.cpp  11_2.cpp  a.out  input2.txt
2/: 2.cpp  2_2.cpp  a.out
3/: 3.cpp  3_2.cpp  a.out
4/: 4.cpp  4_2.cpp  a.out
5/: 5.cpp  5_2.cpp  a.out  input2.txt  input2_1.txt
6/: 6.cpp  6_2.cpp  6_3.cpp  a.out  script.py
7/: 7.cpp  7_2.cpp  a.out
8/: 8.cpp  8_2.cpp  a.out
9/: 9.cpp  9_2.cpp  9_3.cpp  a.out  gpt.cpp
